--- a/2_Co_Productos_prime_dev.html
+++ b/2_Co_Productos_prime_dev.html
@@ -563,7 +563,7 @@ box-shadow: 0px 1px 11px 11px rgba(0,0,0,0.30);
     </div>
     <div style="margin: 0 auto; margin-top: -55px;">
       <div
-        style=" width: 770px; text-align: left; height: 90px; margin: 0 auto;  position: relative; background-color: #F02127;">
+        style=" width: 770px; text-align: justify; height:80px; margin: 0 auto;  position: relative; background-color: #F02127;">
         <p
           style="padding-right:20px;padding-left:20px;font-family:'proxima-nova', sans-serif; color: white; font-size: 14px; padding-top: 12px ">
           PrimeClub siempre te enviará correos personalizados y dirigidos a tu nombre. En nuestros mails
@@ -574,7 +574,7 @@ box-shadow: 0px 1px 11px 11px rgba(0,0,0,0.30);
           mencionadas, elimínalo inmediatamente.</p>
       </div>
       <div
-        style="width: 770px; text-align: left; height: 90px; margin: 0 auto;  position: relative; background-color: white;">
+        style="width: 770px; text-align: justify; height: 90px; margin: 0 auto;  position: relative; background-color: white;">
 
         <p style="font-family:'proxima-nova', sans-serif; color: #454546; font-size: 14px; padding-top: 0px ">
           Si no deseas recibir publicidad ni información de PrimeClub en tu
